Setup linting and file watching

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React Starter App",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
-    "start": "babel-node tools/srcServer.js"
+    "start": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Mike Skaife",
   "license": "MIT",
