Testing framework setup

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "React Starter App",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
-    "start": "babel-node tools/srcServer.js",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha tools/testSetup.js ./test/**/*.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Mike Skaife",
   "license": "MIT",
